hard-gists/5782780/run.log
=== Docker Run Log for 5782780 ===
Started at: Mi 29. Okt 15:57:40 CET 2025

[2025-10-29 15:57:41] START: Running container for 5782780
[2025-10-29 15:57:41] SUCCESS: Container 8e1c86207709ab2b9b7b0829e7ed2485281a41f146c0b1c86b09ab8330ffe227 started for 5782780
=== Container logs for 5782780 ===
  File "/snippet.py", line 139
    print "'Normal' TreeLearner:"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5782780 ===
[2025-10-29 15:57:43] INFO: Container 8e1c86207709ab2b9b7b0829e7ed2485281a41f146c0b1c86b09ab8330ffe227 has stopped
